# kevinpruvost_epitech

./: README.md
SecondYear/FUN_2019/FUN_imageCompressor_2019/: imageCompressor.cabal
SecondYear/FUN_2019/FUN_imageCompressor_2019/bonus/: test0
SecondYear/FUN_2019/FUN_imageCompressor_2019/bonus/sfmlImageCompressor/: Makefile  resultRead.txt
SecondYear/FUN_2019/FUN_imageCompressor_2019/src/: Parsing.hs  Structures.hs
ThirdYear/Babel/: .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  Makefile  README.md  conanfile.txt  conanfileLinux.txt  unix_build.sh  unix_setup.sh  windows_build.bat  windows_setup.bat
ThirdYear/Babel/client/: AudioBuffer.cpp  AudioBuffer.hpp  AudioStream.cpp  AudioStream.hpp  CMakeLists.txt  Client.hpp  Compressor.cpp  Compressor.hpp  VOIP.cpp  VOIP.hpp  main.cpp
ThirdYear/Babel/client/UI/: ATcpSocket.cpp  ATcpSocket.hpp  CMakeLists.txt  ClientConfig.cpp  ClientConfig.hpp  Contact.cpp  Contact.hpp  Contact.ui  ExternalIpGetter.cpp  ExternalIpGetter.hpp  ITcpSocket.hpp  IncomingCallWindow.cpp  IncomingCallWindow.hpp  IncomingCallWindow.ui  LoginForm.cpp  LoginForm.hpp  LoginForm.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  NewConversionFromStdStringToQString.cpp  NewConversionFromStdStringToQString.hpp  ProfileForm.cpp  ProfileForm.hpp  ProfileForm.ui  QtConstants.hpp  Resources.qrc  TcpSocket.cpp  TcpSocket.hpp  main.cpp
ThirdYear/Babel/doc/: RFC.md
ThirdYear/Babel/lib/: CMakeLists.txt  Exception.hpp  ForEpitechNorme.hpp  WindowsExecutableStop.hpp
ThirdYear/Babel/lib/Babel/: ConnectionCredentials.hpp  NetworkRfc.hpp  PacketsData.hpp  PacketsDataBinary.hpp
ThirdYear/Babel/server/: CMakeLists.txt  main.cpp
ThirdYear/Babel/server/database/: sqliteDataBase.cpp  sqliteDataBase.hpp
ThirdYear/Babel/server/networktools/: BabelClient.cpp  BabelClient.hpp  BabelServer.cpp  BabelServer.hpp  ClientManager.cpp  ClientManager.hpp
ThirdYear/R-type/: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  conanfile.txt  conanfileLinux.txt  unix_build.sh  unix_setup.sh  windows_build.bat
ThirdYear/R-type/benchmarks/: CMakeLists.txt  main.cpp
ThirdYear/R-type/benchmarks/googlebenchmarksetup/: .gitignore  README.md
ThirdYear/R-type/client/: CMakeLists.txt  Client.cpp  Client.hpp  main.cpp
ThirdYear/R-type/client/NetworkClient/: ClientTCP.cpp  ClientTCP.hpp  ClientUDP.cpp  ClientUDP.hpp  INetworkClient.hpp
ThirdYear/R-type/client/Rendering/: LoginPage.cpp  LoginPage.hpp  MainPage.cpp  MainPage.hpp  MenuPage.cpp  MenuPage.hpp
ThirdYear/R-type/doc/: Rfc.md  Rfc2223.txt
ThirdYear/R-type/lib/: CMakeLists.txt  Chronometer.cpp  Chronometer.hpp  DebugController.cpp  DebugController.hpp  Exception.hpp  ForEpitechNorme.hpp  WindowsExecutableStop.hpp
ThirdYear/R-type/lib/Components/: AllComponents.hpp  ExampleComponent.cpp  ExampleComponent.hpp
ThirdYear/R-type/lib/Components/Audio/: Audio.cpp  Audio.hpp
ThirdYear/R-type/lib/Components/Button/: Button.cpp  Button.hpp
ThirdYear/R-type/lib/Components/CharacterCharacteristics/: CharacterCharacteristics.cpp  CharacterCharacteristics.hpp
ThirdYear/R-type/lib/Components/Collider/: Collider.cpp  Collider.hpp
ThirdYear/R-type/lib/Components/KeyInput/: KeyInput.cpp  KeyInput.hpp
ThirdYear/R-type/lib/Components/Sprite/: Sprite.cpp  Sprite.hpp
ThirdYear/R-type/lib/Components/Text/: Text.cpp  Text.hpp
ThirdYear/R-type/lib/Components/TextInput/: TextInput.cpp  TextInput.hpp
ThirdYear/R-type/lib/Components/Transform/: Transform.cpp  Transform.hpp
ThirdYear/R-type/lib/Components/UITransform/: UITransform.cpp  UITransform.hpp
ThirdYear/R-type/lib/DLLoader/: DLLoader.cpp  DLLoader.hpp  RTypeDLLoader.cpp  RTypeDLLoader.hpp  dll.h  export.h  linux_load.c  window_load.c
ThirdYear/R-type/lib/Engine/: Component.cpp  Component.hpp  ComponentArray.hpp  ComponentFactory.cpp  ComponentFactory.hpp  Entity.cpp  Entity.hpp  EntityIdFactory.cpp  EntityIdFactory.hpp  EntitySignature.cpp  EntitySignature.hpp  IComponent.hpp  IComponentArray.hpp  IComponentFactory.hpp  IEntity.hpp  IEntityIdFactory.hpp  IREngine.hpp  ISystem.hpp  NetworkEngine.cpp  NetworkEngine.hpp  RAccess.hpp  RComponent.cpp  RComponent.hpp  REngine.cpp  REngine.hpp  REntity.cpp  REntity.hpp  RSystem.cpp  RSystem.hpp  System.cpp  System.hpp  SystemFactory.cpp  SystemFactory.hpp
ThirdYear/R-type/lib/Entities/: ExampleEntity.cpp  ExampleEntity.hpp
ThirdYear/R-type/lib/Entities/MusicPlayer/: MusicPlayer.cpp  MusicPlayer.hpp
ThirdYear/R-type/lib/Entities/Object/: Object.cpp  Object.hpp
ThirdYear/R-type/lib/Entities/UI/: UI.cpp  UI.hpp
ThirdYear/R-type/lib/FileSystemWatcher/: Chrono.cpp  Chrono.hpp  RTypeFileSystemWatcher.cpp  RTypeFileSystemWatcher.hpp  get_path.h  linux_get_current_path.c  windows_get_current_path.c
ThirdYear/R-type/lib/Game/: CMakeLists.txt  FpsDisplayer.cpp  FpsDisplayer.hpp  TitleScreen.cpp  TitleScreen.hpp
ThirdYear/R-type/lib/Game/EntityInGame/: InGameBoss.cpp  InGameBoss.hpp  InGameGenericMob.cpp  InGameGenericMob.hpp  InGameMonsterFactory.cpp  InGameMonsterFactory.hpp  InGameObstacle.cpp  InGameObstacle.hpp  InGamePlayer.cpp  InGamePlayer.hpp  Lib.hpp
ThirdYear/R-type/lib/Game/GamePage/: Controller.cpp  Controller.hpp
ThirdYear/R-type/lib/Game/MenuPage/: Background.cpp  (+9 more)
ThirdYear/R-type/lib/Network/: BinaryStructure.hpp  Rfc.hpp
ThirdYear/R-type/lib/Systems/: ColliderSystem.cpp  ColliderSystem.hpp  ExampleSystem.cpp  ExampleSystem.hpp  InputSystem.cpp  InputSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  RenderingSystem.cpp  RenderingSystem.hpp
ThirdYear/R-type/resources/: resources_paths.json
ThirdYear/R-type/server/: CMakeLists.txt  Player.cpp  Player.hpp  Room.cpp  Room.hpp  TcpClient.cpp  TcpClient.hpp  TcpClientManager.cpp  TcpClientManager.hpp  TcpServer.cpp  TcpServer.hpp  UdpServer.cpp  UdpServer.hpp  main.cpp
ThirdYear/R-type/tests/: CMakeLists.txt  main.cpp
ThirdYear/R-type/tests/DLLoader/: ChildTest.cpp  ChildTest.hpp  TestClass.cpp  TestClass.hpp
ThirdYear/R-type/tests/Engine/: ColliderTest.hpp  TestComponent.hpp  TestEntity.hpp  TestSystem.hpp
(+1524 files in other folders)
