name:                imageCompressor
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/imageCompressor#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable imageCompressor
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       random, base >= 4.7 && < 5
  other-modules:       ImageCompressor, Parsing, Structures, ParseArgs