# CMakeList.txt : projet CMake pour Babel, incluez la source et définissez
# la logique spécifique au projet ici.
#
cmake_minimum_required (VERSION 3.8)

# Ajoutez une source à l'exécutable de ce projet.
#add_library(myLibrary
#    WindowsExecutableStop.cpp
#    WindowsExecutableStop.hpp
#    ForEpitechNorme.hpp
#
#    Babel/NetworkRfc.hpp
#    Babel/PacketsData.hpp
#    Babel/PacketsData.cpp
#    Babel/ConnectionCredentials.cpp
#    Babel/ConnectionCredentials.hpp
#)

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
